# steel-eye-tech-test

./: .pre-commit-config.yaml  README.md  pyproject.toml
