[project]
name = "main"
version = "0.1.0"
description = ""
authors = [
    {name = "Andreia",email = "andreiagomes98@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
ruff = "^0.12.1"
mypy = "^1.16.1"
pre-commit = "^4.2.0"